--- a/experiments/static/experiments/dashboard/css/admin.css
+++ b/experiments/static/experiments/dashboard/css/admin.css
@@ -162,12 +162,15 @@ body.change-form #admin_conditionals-group .inline-related.last-related .form-ro
 
 
 /* remote experiments stats mini table */
-#changelist .field-confidences > table.ministats {
+#changelist .field-confidences > table.ministats,
+.grp-change-list .field-confidences > table.ministats {
     border: none;
     width: auto;
 }
 #changelist .field-confidences > table.ministats th,
-#changelist .field-confidences > table.ministats td {
+#changelist .field-confidences > table.ministats td,
+.grp-change-list .field-confidences > table.ministats th,
+.grp-change-list .field-confidences > table.ministats td {
     padding: 0 8px 3px 0;
     border: none;
 }
