--- a/experiments/static/experiments/dashboard/css/admin.css
+++ b/experiments/static/experiments/dashboard/css/admin.css
@@ -183,6 +183,7 @@ body.change-form #admin_conditionals-group .inline-related.last-related .form-ro
 #changelist .field-state_toggle .state_toggle a,
 .grp-change-list .field-state_toggle .state_toggle a {
     display: inline-block;
+    position: relative;
     border: 1px solid transparent;
     padding: 0 2px;
 }
@@ -200,13 +201,42 @@ body.change-form #admin_conditionals-group .inline-related.last-related .form-ro
     border-color: inherit;
 }
 #changelist .field-state_toggle .state_toggle a.error,
-.grp-change-list .field-state_toggle .state_toggle a.error{
+.grp-change-list .field-state_toggle .state_toggle a.error {
     color: red;
 }
 #changelist .field-state_toggle .state_toggle a.working,
-.grp-change-list .field-state_toggle .state_toggle a.working{
-    color: gray;
+.grp-change-list .field-state_toggle .state_toggle a.working {
+    color: black;
+    cursor: default;
 }
+#changelist .field-state_toggle .state_toggle a.really,
+.grp-change-list .field-state_toggle .state_toggle a.really,
+#changelist .field-state_toggle .state_toggle a.really.working,
+.grp-change-list .field-state_toggle .state_toggle a.really.working {
+    color: transparent;
+}
+#changelist .field-state_toggle .state_toggle a.really::after,
+.grp-change-list .field-state_toggle .state_toggle a.really::after,
+#changelist .field-state_toggle .state_toggle a.really.working::after,
+.grp-change-list .field-state_toggle .state_toggle a.really.working::after {
+    position: absolute;
+    color: black !important;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: 0 -10px;
+    text-align: center;
+    color: inherit;
+}
+#changelist .field-state_toggle .state_toggle a.really::after,
+.grp-change-list .field-state_toggle .state_toggle a.really::after {
+    content: "Confirm?";
+}
+#changelist .field-state_toggle .state_toggle a.really.working::after,
+.grp-change-list .field-state_toggle .state_toggle a.really.working::after {
+    content: "Working...";
+}
+
 
 /* misc */
 body.experiments-experiment table.relevant-goals,
