--- a/experiments/templates/experiments/confirm_human.html
+++ b/experiments/templates/experiments/confirm_human.html
@@ -1,5 +1,5 @@
 {% if not confirmed_human %}
-    <script type="text/javascript" charset="utf-8">
+    <script>
         experiments.confirm_human();
     </script>
 {% endif %}
